# tradelore

./: .gitignore  docker-compose.yml
backend/: Cargo.toml
database/pocketbase/pb_data/: auxiliary.db  auxiliary.db-shm  auxiliary.db-wal  data.db  data.db-shm  data.db-wal
database/pocketbase/pb_migrations/: 1741038593_updated_users.js  1741038701_updated_users.js  1741038775_created_wallets.js  1741038849_created_transactions.js  1741038962_created_watchlists.js  1741039019_updated_watchlists.js  1741039098_created_alerts.js  1741039179_created_orderbook.js  1741039204_updated_alerts.js  1741039223_updated_transactions.js  1741039242_updated_wallets.js  1741039281_updated_watchlists.js  1741039404_updated_orderbook.js  1741053551_updated_users.js  1741063180_updated_users.js  1741063238_updated_users.js  1741111652_created_tokens.js  1741111923_updated_tokens.js  1741113688_updated_tokens.js  1741115057_updated_tokens.js  1741115186_updated_users.js  1741115736_updated_tokens.js  1741119646_updated_tokens.js  1741122097_updated_tokens.js  1741122108_updated_tokens.js  1741479720_updated_users.js  1741479727_updated_users.js  1741566390_updated_users.js  1741655102_updated_wallets.js  1741667222_updated_wallets.js  1741667345_updated_wallets.js  1741667732_updated_wallets.js  1741799305_created_agents.js  1741799310_updated_agents.js  1741819737_updated_wallets.js  1741821215_updated_wallets.js  1741822367_updated_wallets.js  1741898229_created_pairs.js  (+5 more)
frontend/: package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: db.ts
(+86 files in other folders)
