[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.16.0"
chrono = "0.4.39"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = "1.42.0"
uuid = { version = "1.11.0", features = ["v4"] }
